@@ -7,6 +7,7 @@
    * Add --quiet and --verbose flags. (#40)
  * moggsplit: --m3u option to write an M3U playlist of the new files. (#39)
  * mid3iconv: Fix crash when processing TCML or TIPL frames. (#41)
+ * MP3: Correct length calculation for MPEG-2 files. (#46)
 
 1.18 - 2009.10.22
  * ASF:
